# mysqludf_host_resolver

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: config.h.in  lib_msqludf_host_resolver.h
sql/: installdb.sql  uninstalldb.sql
src/: lib_mysqludf_host_resolver.c  udf_example.c
